--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,15 @@ h1, p {
     font-weight: bold;
     margin-top: auto;
 }
+
+#notif-btn {
+    font-family: inherit;
+    background-color: #fff;
+    border-radius: 3px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#notif-btn:hover {
+    background-color: #ddd;
+}
